[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/UI.gd" type="Script" id=1]
[ext_resource path="res://images/healthBarUnder.png" type="Texture" id=2]
[ext_resource path="res://images/healthBarOver.png" type="Texture" id=3]
[ext_resource path="res://images/stageBarOver.png" type="Texture" id=4]
[ext_resource path="res://images/stageBarUnder.png" type="Texture" id=5]
[ext_resource path="res://resources/Silver.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://images/sprites/gattlinSpheres.png" type="Texture" id=7]
[ext_resource path="res://images/sprites/cannon.png" type="Texture" id=8]
[ext_resource path="res://images/sprites/firefly.png" type="Texture" id=9]
[ext_resource path="res://images/sprites/dart.png" type="Texture" id=10]
[ext_resource path="res://images/sprites/manaBurst.png" type="Texture" id=11]
[ext_resource path="res://images/sprites/poison.png" type="Texture" id=12]
[ext_resource path="res://images/sprites/torchlight.png" type="Texture" id=13]
[ext_resource path="res://music/Spelll13.wav" type="AudioStream" id=14]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0509804, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
extra_spacing_bottom = -10
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=5]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverPanel:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -181 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "newSkillAcquiredNotif"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("NewSkillNotif:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("NewSkillNotif:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0745098 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("NewSkillNotif:custom_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.254902, 0.635294, 0.321569, 1 ), Color( 0.137255, 1, 0.290196, 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0941176, 0.0117647, 0.0117647, 1 )

[node name="UI" type="Control" groups=[
"UIGroup",
]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 9.0
margin_top = 4.0
margin_right = 125.0
margin_bottom = 12.0
step = 0.01
value = 40.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_right = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="Button" parent="."]
margin_left = 292.0
margin_top = 4.0
margin_right = 332.0
margin_bottom = 17.0
focus_mode = 0
enabled_focus_mode = 0
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 143.0
margin_right = -10.0
margin_bottom = 2.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="StageBar" type="TextureProgress" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0
margin_bottom = -3.0
step = 0.01
value = 33.2
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_right = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 18.0
margin_right = -308.0
margin_bottom = 20.0
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Panel"]
anchor_right = 0.997
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 18.0
margin_right = -263.028
margin_bottom = 6.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 98.0
margin_top = 18.0
margin_right = -210.0
margin_bottom = 6.0
texture = ExtResource( 7 )

[node name="TextureRect4" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 148.0
margin_top = 18.0
margin_right = -159.0
margin_bottom = 20.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 203.0
margin_top = 18.0
margin_right = -103.0
margin_bottom = 20.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 257.0
margin_top = 18.0
margin_right = -50.0
margin_bottom = 20.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 307.0
margin_top = 18.0
margin_bottom = 20.0
texture = ExtResource( 12 )

[node name="GameOverPanel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -181.0
margin_bottom = -181.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOverPanel"]
margin_left = 68.0
margin_top = 61.0
margin_right = 270.0
margin_bottom = 108.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Game Over
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="GameOverPanel"]
margin_left = 125.0
margin_top = 117.0
margin_right = 216.0
margin_bottom = 139.0
text = "Home"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/gameOverSlide = SubResource( 5 )
anims/newSkillAcquiredNotif = SubResource( 6 )

[node name="PausePanel" type="Panel" parent="."]
visible = false
margin_left = 88.0
margin_top = 52.0
margin_right = 260.0
margin_bottom = 104.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="PausePanel"]
margin_left = 33.0
margin_top = 29.0
margin_right = 136.0
margin_bottom = 44.0
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PausePanel"]
margin_right = 172.0
margin_bottom = 21.0
custom_styles/normal = SubResource( 7 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewSkillNotif" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.0745098 )
margin_left = 143.0
margin_top = 33.0
margin_right = 227.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.137255, 1, 0.290196, 1 )
text = "New skill acquired!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillAddSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="SurvivalTimeLabel" type="Label" parent="."]
margin_left = 163.0
margin_right = 208.0
margin_bottom = 21.0
text = "00:00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="GameOverPanel/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="PausePanel/MenuButton" to="." method="_on_MenuButton_pressed"]
